#ifndef __TPOAM_EVENT_H__
#define __TPOAM_EVENT_H__


typedef enum
{
    ALARM_TYPE_OCCUR = 0,
    ALARM_TYPE_RELEASE,
    ALARM_TYPE_MAX
}alarm_type_t;


typedef enum
{
    ALARM_IDX_UNIT_OUT = 0,
    ALARM_IDX_SFP_OUT,
    ALARM_IDX_LINK_DOWN,
    ALARM_IDX_VPWS_DOWN,
    ALARM_IDX_VPLS_DOWN,
    ALARM_IDX_LSP_DOWN,
    ALARM_IDX_MSPW_DOWN,
    ALARM_IDX_MEM_USAGE_HIGH,

    /* tp-oam event */
    ALARM_IDX_TP_OAM_LOC,
    ALARM_IDX_TP_OAM_UNEXP_RMEPID,
    ALARM_IDX_TP_OAM_UNEXP_INTERVAL,
    ALARM_IDX_TP_OAM_UNEXP_MEGID,
    ALARM_IDX_TP_OAM_UNEXP_LEVEL,
    ALARM_IDX_TP_OAM_RDI,
    ALARM_IDX_TP_OAM_RDI_TX,
    ALARM_IDX_TP_OAM_AIS_DEFECT,
    ALARM_IDX_TP_OAM_EVENT_FULL,
    ALARM_IDX_TP_OAM_1DM_FULL,
    ALARM_IDX_TP_OAM_WAIT_1ST_CCM,
    ALARM_IDX_TP_OAM_AIS_RX,
    ALARM_IDX_TP_OAM_AIS_TX,

    /* tca */
    ALARM_IDX_TCA_UNIT_TEMP_MIN_15M,
    ALARM_IDX_TCA_UNIT_TEMP_MIN_1H,
    ALARM_IDX_TCA_UNIT_TEMP_MIN_1D,
    ALARM_IDX_TCA_UNIT_TEMP_MAX_15M,
    ALARM_IDX_TCA_UNIT_TEMP_MAX_1H,
    ALARM_IDX_TCA_UNIT_TEMP_MAX_1D,
    ALARM_IDX_TCA_SFP_RX_POWER_MIN_15M,
    ALARM_IDX_TCA_SFP_RX_POWER_MIN_1H,
    ALARM_IDX_TCA_SFP_RX_POWER_MIN_1D,
    ALARM_IDX_TCA_SFP_RX_POWER_MAX_15M,
    ALARM_IDX_TCA_SFP_RX_POWER_MAX_1H,
    ALARM_IDX_TCA_SFP_RX_POWER_MAX_1D,
    ALARM_IDX_TCA_SFP_TX_POWER_MIN_15M,
    ALARM_IDX_TCA_SFP_TX_POWER_MIN_1H,
    ALARM_IDX_TCA_SFP_TX_POWER_MIN_1D,
    ALARM_IDX_TCA_SFP_TX_POWER_MAX_15M,
    ALARM_IDX_TCA_SFP_TX_POWER_MAX_1H,
    ALARM_IDX_TCA_SFP_TX_POWER_MAX_1D,
    ALARM_IDX_TCA_IF_STAT_DROPPE_15M,
    ALARM_IDX_TCA_IF_STAT_DROPPE_1H,
    ALARM_IDX_TCA_IF_STAT_DROPPED_1D,
    ALARM_IDX_TCA_IF_STAT_INPUT_PKT_15M,
    ALARM_IDX_TCA_IF_STAT_INPUT_PKT_1H,
    ALARM_IDX_TCA_IF_STAT_INPUT_PKT_1D,
    ALARM_IDX_TCA_IF_STAT_INPUT_BYTE_15M,
    ALARM_IDX_TCA_IF_STAT_INPUT_BYTE_1H,
    ALARM_IDX_TCA_IF_STAT_INPUT_BYTE_1D,
    ALARM_IDX_TCA_IF_STAT_INPUT_BRD_15M,
    ALARM_IDX_TCA_IF_STAT_INPUT_BRD_1H,
    ALARM_IDX_TCA_IF_STAT_INPUT_BRD_1D,
    ALARM_IDX_TCA_IF_STAT_INPUT_MLT_15M,
    ALARM_IDX_TCA_IF_STAT_INPUT_MLT_1H,
    ALARM_IDX_TCA_IF_STAT_INPUT_MLT_1D,
    ALARM_IDX_TCA_IF_STAT_CRC_ERROR_15M,
    ALARM_IDX_TCA_IF_STAT_CRC_ERROR_1H,
    ALARM_IDX_TCA_IF_STAT_CRC_ERROR_1D,
    ALARM_IDX_TCA_IF_STAT_COLLISIONS_15M,
    ALARM_IDX_TCA_IF_STAT_COLLISIONS_1H,
    ALARM_IDX_TCA_IF_STAT_COLLISIONS_1D,
    ALARM_IDX_TCA_IF_STAT_UNDERSIZED_15M,
    ALARM_IDX_TCA_IF_STAT_UNDERSIZED_1H,
    ALARM_IDX_TCA_IF_STAT_UNDERSIZED_1D,
    ALARM_IDX_TCA_IF_STAT_OVERSIZED_15M,
    ALARM_IDX_TCA_IF_STAT_OVERSIZED_1H,
    ALARM_IDX_TCA_IF_STAT_OVERSIZED_1D,
    ALARM_IDX_TCA_IF_STAT_FRAGMENTS_15M,
    ALARM_IDX_TCA_IF_STAT_FRAGMENTS_1H,
    ALARM_IDX_TCA_IF_STAT_FRAGMENTS_1D,
    ALARM_IDX_TCA_IF_STAT_JABBERS_15M,
    ALARM_IDX_TCA_IF_STAT_JABBERS_1H,
    ALARM_IDX_TCA_IF_STAT_JABBERS_1D,
    ALARM_IDX_TCA_IF_STAT_PKT_64_15M,
    ALARM_IDX_TCA_IF_STAT_PKT_64_1H,
    ALARM_IDX_TCA_IF_STAT_PKT_64_1D,
    ALARM_IDX_TCA_IF_STAT_PKT_65_127_15M,
    ALARM_IDX_TCA_IF_STAT_PKT_65_127_1H,
    ALARM_IDX_TCA_IF_STAT_PKT_65_127_1D,
    ALARM_IDX_TCA_IF_STAT_PKT_128_255_15M,
    ALARM_IDX_TCA_IF_STAT_PKT_128_255_1H,
    ALARM_IDX_TCA_IF_STAT_PKT_128_255_1D,
    ALARM_IDX_TCA_IF_STAT_PKT_256_511_15M,
    ALARM_IDX_TCA_IF_STAT_PKT_256_511_1H,
    ALARM_IDX_TCA_IF_STAT_PKT_256_511_1D,
    ALARM_IDX_TCA_IF_STAT_PKT_512_1023_15M,
    ALARM_IDX_TCA_IF_STAT_PKT_512_1023_1H,
    ALARM_IDX_TCA_IF_STAT_PKT_512_1023_1D,
    ALARM_IDX_TCA_IF_STAT_PKT_1024_15M,
    ALARM_IDX_TCA_IF_STAT_PKT_1024_1H,
    ALARM_IDX_TCA_IF_STAT_PKT_1024_1D,
    ALARM_IDX_TCA_IF_STAT_OUTPUT_PKT_15M,
    ALARM_IDX_TCA_IF_STAT_OUTPUT_PKT_1H,
    ALARM_IDX_TCA_IF_STAT_OUTPUT_PKT_1D,
    ALARM_IDX_TCA_IF_STAT_OUTPUT_BYTE_15M,
    ALARM_IDX_TCA_IF_STAT_OUTPUT_BYTE_1H,
    ALARM_IDX_TCA_IF_STAT_OUTPUT_BYTE_1D,
    ALARM_IDX_TCA_LSP_PE_OUT_PKT_15M,
    ALARM_IDX_TCA_LSP_PE_OUT_PKT_1H,
    ALARM_IDX_TCA_LSP_PE_OUT_PKT_1D,
    ALARM_IDX_TCA_LSP_PE_OUT_BYTE_15M,
    ALARM_IDX_TCA_LSP_PE_OUT_BYTE_1H,
    ALARM_IDX_TCA_LSP_PE_OUT_BYTE_1D,
    ALARM_IDX_TCA_LSP_P_EAST_IN_PKT_15M,
    ALARM_IDX_TCA_LSP_P_EAST_IN_PKT_1H,
    ALARM_IDX_TCA_LSP_P_EAST_IN_PKT_1D,
    ALARM_IDX_TCA_LSP_P_EAST_IN_BYTE_15M,
    ALARM_IDX_TCA_LSP_P_EAST_IN_BYTE_1H,
    ALARM_IDX_TCA_LSP_P_EAST_IN_BYTE_1D,
    ALARM_IDX_TCA_LSP_P_WEST_IN_PKT_15M,
    ALARM_IDX_TCA_LSP_P_WEST_IN_PKT_1H,
    ALARM_IDX_TCA_LSP_P_WEST_IN_PKT_1D,
    ALARM_IDX_TCA_LSP_P_WEST_IN_BYTE_15M,
    ALARM_IDX_TCA_LSP_P_WEST_IN_BYTE_1H,
    ALARM_IDX_TCA_LSP_P_WEST_IN_BYTE_1D,
    ALARM_IDX_TCA_VPWS_INGRESS_PKT_15M,
    ALARM_IDX_TCA_VPWS_INGRESS_PKT_1H,
    ALARM_IDX_TCA_VPWS_INGRESS_PKT_1D,
    ALARM_IDX_TCA_VPWS_INGRESS_BYTE_15M,
    ALARM_IDX_TCA_VPWS_INGRESS_BYTE_1H,
    ALARM_IDX_TCA_VPWS_INGRESS_BYTE_1D,
    ALARM_IDX_TCA_VPWS_EGRESS_PKT_15M,
    ALARM_IDX_TCA_VPWS_EGRESS_PKT_1H,
    ALARM_IDX_TCA_VPWS_EGRESS_PKT_1D,
    ALARM_IDX_TCA_VPWS_EGRESS_BYTE_15M,
    ALARM_IDX_TCA_VPWS_EGRESS_BYTE_1H,
    ALARM_IDX_TCA_VPWS_EGRESS_BYTE_1D,
    ALARM_IDX_TCA_VPLS_INGRESS_PKT_15M,
    ALARM_IDX_TCA_VPLS_INGRESS_PKT_1H,
    ALARM_IDX_TCA_VPLS_INGRESS_PKT_1D,
    ALARM_IDX_TCA_VPLS_INGRESS_BYTE_15M,
    ALARM_IDX_TCA_VPLS_INGRESS_BYTE_1H,
    ALARM_IDX_TCA_VPLS_INGRESS_BYTE_1D,
    ALARM_IDX_TCA_VPLS_EGRESS_PKT_15M,
    ALARM_IDX_TCA_VPLS_EGRESS_PKT_1H,
    ALARM_IDX_TCA_VPLS_EGRESS_PKT_1D,
    ALARM_IDX_TCA_VPLS_EGRESS_BYTE_15M,
    ALARM_IDX_TCA_VPLS_EGRESS_BYTE_1H,
    ALARM_IDX_TCA_VPLS_EGRESS_BYTE_1D,

    /* mpls alarm */
    ALARM_IDX_MPLS_TUNNEL_SWITCH,
    ALARM_IDX_MPLS_TP_VPWS_SWITCH,
    ALARM_IDX_MPLS_VPLS_TP_PEER_SWITCH,

    /* mpls tp oam event */
    ALARM_IDX_TP_OAM_LCK_RX,
    ALARM_IDX_TP_OAM_LCK_TX,
    ALARM_IDX_TP_OAM_LCK_DEFECT,

    /* tca */
    ALARM_IDX_TCA_MSPW_EAST_INGRESS_PKT_15M,
    ALARM_IDX_TCA_MSPW_EAST_INGRESS_PKT_1H,
    ALARM_IDX_TCA_MSPW_EAST_INGRESS_PKT_1D,
    ALARM_IDX_TCA_MSPW_EAST_INGRESS_BYTE_15M,
    ALARM_IDX_TCA_MSPW_EAST_INGRESS_BYTE_1H,
    ALARM_IDX_TCA_MSPW_EAST_INGRESS_BYTE_1D,
    ALARM_IDX_TCA_MSPW_EAST_EGRESS_PKT_15M,
    ALARM_IDX_TCA_MSPW_EAST_EGRESS_PKT_1H,
    ALARM_IDX_TCA_MSPW_EAST_EGRESS_PKT_1D,
    ALARM_IDX_TCA_MSPW_EAST_EGRESS_BYTE_15M,
    ALARM_IDX_TCA_MSPW_EAST_EGRESS_BYTE_1H,
    ALARM_IDX_TCA_MSPW_EAST_EGRESS_BYTE_1D,
    ALARM_IDX_TCA_MSPW_WEST_INGRESS_PKT_15M,
    ALARM_IDX_TCA_MSPW_WEST_INGRESS_PKT_1H,
    ALARM_IDX_TCA_MSPW_WEST_INGRESS_PKT_1D,
    ALARM_IDX_TCA_MSPW_WEST_INGRESS_BYTE_15M,
    ALARM_IDX_TCA_MSPW_WEST_INGRESS_BYTE_1H,
    ALARM_IDX_TCA_MSPW_WEST_INGRESS_BYTE_1D,
    ALARM_IDX_TCA_MSPW_WEST_EGRESS_PKT_15M,
    ALARM_IDX_TCA_MSPW_WEST_EGRESS_PKT_1H,
    ALARM_IDX_TCA_MSPW_WEST_EGRESS_PKT_1D,
    ALARM_IDX_TCA_MSPW_WEST_EGRESS_BYTE_15M,
    ALARM_IDX_TCA_MSPW_WEST_EGRESS_BYTE_1H,
    ALARM_IDX_TCA_MSPW_WEST_EGRESS_BYTE_1D,
    ALARM_IDX_TCA_TP_VPWS_INGRESS_PKT_15M,
    ALARM_IDX_TCA_TP_VPWS_INGRESS_PKT_1H,
    ALARM_IDX_TCA_TP_VPWS_INGRESS_PKT_1D,
    ALARM_IDX_TCA_TP_VPWS_INGRESS_BYTE_15M,
    ALARM_IDX_TCA_TP_VPWS_INGRESS_BYTE_1H,
    ALARM_IDX_TCA_TP_VPWS_INGRESS_BYTE_1D,
    ALARM_IDX_TCA_TP_VPWS_EGRESS_PKT_15M,
    ALARM_IDX_TCA_TP_VPWS_EGRESS_PKT_1H,
    ALARM_IDX_TCA_TP_VPWS_EGRESS_PKT_1D,
    ALARM_IDX_TCA_TP_VPWS_EGRESS_BYTE_15M,
    ALARM_IDX_TCA_TP_VPWS_EGRESS_BYTE_1H,
    ALARM_IDX_TCA_TP_VPWS_EGRESS_BYTE_1D,
    ALARM_IDX_TCA_TP_PEER_INGRESS_PKT_15M,
    ALARM_IDX_TCA_TP_PEER_INGRESS_PKT_1H,
    ALARM_IDX_TCA_TP_PEER_INGRESS_PKT_1D,
    ALARM_IDX_TCA_TP_PEER_INGRESS_BYTE_15M,
    ALARM_IDX_TCA_TP_PEER_INGRESS_BYTE_1H,
    ALARM_IDX_TCA_TP_PEER_INGRESS_BYTE_1D,
    ALARM_IDX_TCA_TP_PEER_EGRESS_PKT_15M,
    ALARM_IDX_TCA_TP_PEER_EGRESS_PKT_1H,
    ALARM_IDX_TCA_TP_PEER_EGRESS_PKT_1D,
    ALARM_IDX_TCA_TP_PEER_EGRESS_BYTE_15M,
    ALARM_IDX_TCA_TP_PEER_EGRESS_BYTE_1H,
    ALARM_IDX_TCA_TP_PEER_EGRESS_BYTE_1D,

    /* modified by yaom for CRC trigger AIS 20140919 */
    ALARM_IDX_TP_OAM_CRC_DEFECT,
    ALARM_IDX_IF_CRC_DEFECT,
    
    ALARM_IDX_MAX        
}alarm_index_t;


struct tpoam_event_entry_s
{
    uint32      event;
    uint32      is_set;
    sal_time_t  time;
};
typedef struct tpoam_event_entry_s tpoam_event_entry_t;
int32
tpoam_event_clear_oam_event(FILE *fp, tbl_oam_session_t* pst_oam, tpoam_lm_dual_enable_input_t* bb);

int32
tpoam_event_set_oam_status(tbl_oam_session_t* pst_oam, uint32 event_bmp, uint32 event, uint32* p_rdi_clr);

int32
tpoam_event_handle_hsrv_msg(int32 sock, int32 sess_fd, ctc_msg_t *p_msg);

int32
tpoam_event_init(tbl_oam_session_t* pst_oam);

int32
tpoam_event_deinit(tbl_oam_session_t* pst_oam);

int32
tpoam_event_add_rmep_set(tbl_oam_session_t* pst_oam);

int32
tpoam_event_del_rmep_clear(tbl_oam_session_t* pst_oam);

int32
tpoam_event_del_lmep_clear(tbl_oam_session_t* pst_oam);

int32
tpoam_event_update_signal_status(tbl_oam_session_t* pst_oam);

#endif /* !__TPOAM_EVENT_H__ */
